# luminary

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.langfuse.yml  docker-compose.yml  prd.json  surface-manifest.json
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUGGESTED_ISSUES.md  labeler.yml
backend/: .env.example  Dockerfile  Dockerfile.ci  alembic.ini  check_fts.py  pyproject.toml  test_annotation.py  test_api.py  test_dashboard.py
backend/alembic/: env.py
backend/alembic/versions/: 20260715_938e28777f4a_baseline.py  20260715_cc1bfee0cb5b_drop_orphan_tables_from_removed_features.py  20260723_41b18d4c6987_add_documents_is_technical.py
backend/app/: config.py  config.py-E  database.py  db_init.py  db_init.py-E  full_extras.py  labs_extras.py  main.py  main.py-E  models.py  models.py-E  surface_manifest.py  telemetry.py  telemetry.py-E  types.py  types.py-E
backend/app/repos/: __init__.py-E  annotation_repo.py  clip_repo.py  collection_repo.py  document_repo.py  document_repo.py-E  flashcard_repo.py  note_repo.py  reference_repo.py  study_repo.py  tag_repo.py
backend/app/routers/: admin.py  annotations.py  blog.py  chat_meta.py  chat_sessions.py  clips.py  code_executor.py  collections.py  concepts.py  documents.py  documents.py-E  engagement.py  evals.py  explain.py  explain.py-E  feynman.py  feynman.py-E  flashcards.py  flashcards.py-E  goals.py  graph.py  home.py  images.py  images.py-E  mastery.py  monitoring.py  notes.py  notes.py-E  pomodoro.py  qa.py  reading.py  reading.py-E  references.py  references.py-E  search.py  sections.py  settings.py  settings.py-E  study.py  study.py-E  (+4 more)
backend/app/runtime/: chat_graph.py  chat_graph.py-E
backend/app/runtime/chat_nodes/: __init__.py  _shared.py  _shared.py-E  comparative.py  comparative.py-E  confidence.py  confidence.py-E  graph.py  notes.py  notes.py-E  search.py  search.py-E  socratic.py  summary.py  summary.py-E  synthesize.py  synthesize.py-E
backend/app/schemas/: __init__.py  blog.py  documents.py  documents.py-E  flashcards.py  flashcards.py-E  home.py  membership.py  notes.py  notes.py-E  study.py  study.py-E
backend/app/scripts/: backfill_concepts.py  regenerate_concepts.py  reindex_entities.py  reindex_entities.py-E
backend/app/services/: activity_service.py  article_extractor.py  article_extractor.py-E  audio_transcriber.py  blog_service.py  book_parser.py  book_parser.py-E  chat_sessions.py  chat_sessions.py-E  clustering_service.py  clustering_service.py-E  code_executor.py  code_executor.py-E  code_parser.py-E  collection_health.py  concept_extraction_service.py  concept_linker.py  concept_service.py  confusion_detector.py  confusion_detector.py-E  connectivity.py  content_dates.py  context_packer.py  context_packer.py-E  conversation_chunker.py  conversation_chunker.py-E  dataset_generator_service.py  dataset_generator_service.py-E  deck_health.py  deck_health.py-E  diagram_extractor.py  document_deletion_service.py  document_search.py  document_tagger.py  documents_service.py  embedder.py  engagement_service.py  enrichment_concurrency.py  enrichment_worker.py  entity_disambiguator.py  (+113 more)
backend/app/workflows/: concept_pipeline.py  ingestion.py
backend/app/workflows/concept_nodes/: __init__.py  _shared.py  build_hierarchy.py  cluster_subconcepts.py  embed_entities.py  label_levels.py  persist.py  rollup_themes.py  score_concepts.py  select_entities.py
backend/app/workflows/ingestion_nodes/: __init__.py  _shared.py  _shared.py-E  chunk.py  embed.py  embed.py-E  entity_extract.py  entity_extract.py-E  finalize.py  finalize.py-E  parse.py  parse.py-E  transcribe.py
backend/tests/: conftest.py  conftest_books.py  stubs.py  test_S175_multi_doc_notes.py  test_S199.py  test_S201.py  test_S206.py  test_S207.py  test_ablation_eval.py  test_activity_service.py  test_annotation_repo.py  test_annotations.py  test_api_contracts.py  test_article_extractor.py  test_audio_ingestion.py  test_auto_collections.py  test_background_routing_privacy.py  test_blog.py  test_book_content.py  test_book_ingestion.py  test_book_parser.py  test_book_parser_fixes.py  test_chat_graph.py  test_chat_graph_gap.py  test_chat_graph_nodes.py  test_chat_graph_notes.py  test_chat_graph_socratic.py  test_chat_graph_teach_back.py  test_chat_graph_web.py  test_chat_sessions_api.py  test_citation_metrics.py  test_clip_repo.py  test_clips_api.py  test_clustering.py  test_code_executor.py  test_code_parser.py  test_collection_health.py  test_collection_member_remove.py  test_collection_overview.py  test_collection_repo.py  (+201 more)
backend/tests/fixtures/: art_of_unix_ch1.txt  time_machine.txt
backend/tools/: boundary_checker.py  dump_openapi.py  layer_linter.py  test_json_update.py
evals/: .realign_book_odyssey.txt  .realign_book_time_machine.txt  METRICS.md  README.md  RUNBOOK.md  audit_golden.py  generate_golden.py  pyproject.toml  realign_hints.py  run_corpus_routing.py  run_eval.py  run_flashcard_eval.py  run_intent_eval.py  run_summary_eval.py  run_topic_eval.py  scores_history.jsonl
evals/golden/: alice_in_wonderland.jsonl  book.flagged.jsonl  book.jsonl  book.meta.json  book_alice.flagged.jsonl  book_alice.jsonl  book_alice.meta.json  book_frankenstein.jsonl  book_frankenstein.meta.json  book_odyssey.jsonl  book_time_machine.flagged.jsonl  book_time_machine.jsonl  book_time_machine.meta.json  code.jsonl  code.meta.json  conversation.jsonl  conversation.meta.json  d2l.flagged.jsonl  d2l.jsonl  d2l.meta.json  flashcards.jsonl  intents.jsonl  manifest.json  notes.jsonl  notes.meta.json  odyssey.flagged.jsonl  odyssey.jsonl  odyssey.meta.json  paper.flagged.jsonl  paper.jsonl  paper.meta.json  summaries.jsonl
evals/golden/topics/: d2l.json
evals/lib/: __init__.py  audit.py  citation_metrics.py  flashcard_metrics.py  golden_relevance.py  golden_verify.py  intent_metrics.py  loader.py  manifest.py  retrieval_metrics.py  runners.py  schemas.py  scoring_history.py  store.py  summary_metrics.py  topic_metrics.py
(+801 files in other folders)
