[project]
name = "luminary-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets==4.5.0",
    "ragas==0.4.3",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",
]
